fixed overlapping header x article

--- a/main.scss
+++ b/main.scss
@@ -279,6 +279,7 @@ article {
     flex-direction: column;
     padding: 3em 2em;
     gap: 5em;
+    z-index: -2; //nice
 
     .bg-video {
         position: absolute;
